--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <html>
 	<head>
+        <script src="utilities.js"></script>
+        <script src="world.js"></script>
+        <script src="rendering.js"></script>
 		<script src="raycast.js"></script>
 		<script>
 			window.onload = startDemo;
 		</script>
 	</head>
 	<body>
-		<canvas id="screen" width="640" height="480">
+		<canvas id="screen" width="640" height="480"></canvas>
 	</body>
 </html>
