Rudimentary lighting for walls.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <script src="utilities.js"></script>
         <script src="world.js"></script>
         <script src="rendering.js"></script>
-		<script src="raycast.js"></script>
+		<script src="main.js"></script>
 		<script>
 			window.onload = startDemo;
 		</script>
