--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
 	<head>
+        <script src="lib/underscore/underscore-min.js"></script>
+        <script src="lib/q/q.js"></script>
+
         <script src="utilities.js"></script>
+        <script src="resources.js"></script>
         <script src="world.js"></script>
         <script src="rendering.js"></script>
 		<script src="main.js"></script>
