--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <script src="lib/underscore/underscore-min.js"></script>
         <script src="lib/q/q.js"></script>
 
+        <script src="vector-math.js"></script>
         <script src="utilities.js"></script>
         <script src="resources.js"></script>
         <script src="world.js"></script>
