Mouse-based controls.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <script src="js/vector-math.js"></script>
         <script src="js/utilities.js"></script>
         <script src="js/resources.js"></script>
+        <script src="js/input.js"></script>
         <script src="js/world.js"></script>
         <script src="js/rendering.js"></script>
 		<script src="js/main.js"></script>
@@ -25,7 +26,8 @@
         <div class="holder">
 		    <canvas id="screen" width="640" height="480"></canvas>
             <div class="info">
-                Use <b>WASD</b> to walk around.
+                Click the screen to activate controls.
+                <b>Mouse</b> looks around, <b>WASD</b> walks around.
             </div>
         </div>
 	</body>
