Firefox compatibility everywhere.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
+
+<!DOCTYPE html>
 <html>
 	<head>
+        <meta charset="utf-8">
+        
         <script src="lib/underscore/underscore-min.js"></script>
         <script src="lib/q/q.js"></script>
 
@@ -24,8 +28,7 @@
 
         <!-- Screen -->
         <div class="holder">
-		    <canvas id="screen" width="640" height="480"></canvas>
-            <div class="info">
+		    <canvas id="screen" width="640" height="480"></canvas><div class="info">
                 Click the screen to activate controls.
                 <b>Mouse</b> looks around, <b>WASD</b> walks around.
             </div>
